[package]
name = "bloons"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.11.3"
bevy_prng = { version = "0.1.0", features = ["rand_chacha"] }
bevy_rand = "0.3.0"
bevy_rapier2d = "0.22.0"
rand_core = "0.6.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.88"

[target.'cfg(target_arch = "wasm32")'] # ??
opt-level = "s"
