[package]
name = "bloons"
version = "0.1.0"
edition = "2021"

[profile.web-release]
inherits = "release"
codegen-units = 1
strip = "debuginfo"
opt-level = "z"
lto = "thin"

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_asset",
    "bevy_audio",
    "bevy_ui",
    "vorbis",
    "png",
    "x11",
] }
bevy_prng = { version = "0.7", features = ["rand_chacha"] }
bevy_rand = "0.7"
bevy_rapier2d = "0.27"
rand_core = "0.6.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.88"
